# SDIT

./: .gitignore  .gitmodules  .savanna.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  rustfmt.toml
.claude/: Feedback.md  Progress.md  settings.json
.claude/Progresses/: 2026-03-11-phase0-reference-reading.md  2026-03-11-phase1-core-mvp.md  2026-03-11-phase1-security-fix.md  2026-03-11-phase2-first-sdi-window.md  2026-03-12-phase2.5-integration-testing.md  2026-03-12-phase2.6-security-fixes.md  2026-03-12-phase2.7-test-smell-fixes.md  2026-03-12-phase3-sdi-multi-window.md  2026-03-12-phase3.1-security-fixes.md  2026-03-12-phase4-session-sidebar.md  2026-03-12-phase5-config-polish.md  2026-03-12-phase5.5-terminal-compat.md  2026-03-12-phase5.9-main-rs-split.md  2026-03-12-phase6.1-mouse-scroll.md  2026-03-12-phase6.2-selection-clipboard.md  2026-03-12-pty-keyboard-fix.md  2026-03-13-phase10.3a-color-emoji-atlas-rgba.md  2026-03-13-phase10.3b-ligature.md  2026-03-13-phase11.1-macos-menubar.md  2026-03-13-phase11.2-context-menu.md  2026-03-13-phase11.3-gui-settings.md  2026-03-13-phase8.2-url-detection.md  2026-03-13-phase9.1-search.md  2026-03-13-phase9.2-keybinds.md  2026-03-14-phase12-macos-release.md  2026-03-14-phase13.2-visual-bell.md  2026-03-14-phase13.3-window-opacity.md  2026-03-14-phase13.4-unsafe-paste.md  2026-03-14-phase13.5-kitty-keyboard.md  2026-03-14-phase13.6-desktop-notification.md  2026-03-14-phase14.1-cursor-config.md  2026-03-14-phase14.5-shell-integration.md  2026-03-14-phase14.6-quick-select.md  2026-03-14-phase15.1-vi-mode.md  2026-03-14-phase16.2-16.7-ux-batch.md  2026-03-14-phase16.8-16.3-ux-final.md  2026-03-14-phase17.1-17.4-ux-batch.md  2026-03-14-phase18.1-18.3-18.4-visual-batch.md  2026-03-14-phase18.2-quick-terminal.md  2026-03-14-phase19.1-19.2-19.4-19.5-refinement-batch.md  (+4 more)
.claude/skills/: annotate-grid.md  clip-image.md  gui-test.md  knowhow-filter.md  knowhow-index.md  knowhow.md  render-text.md  verify-text.md
.claude/templates/: ProgressTemplate.md
crates/sdit/: Cargo.toml
crates/sdit-config/: Cargo.toml
crates/sdit-core/: Cargo.toml
crates/sdit-core/src/: index.rs  lib.rs  selection.rs
crates/sdit-core/src/config/: color.rs  font.rs  keybinds.rs  mod.rs  tests.rs
crates/sdit-core/src/grid/: cell.rs  mod.rs  row.rs  storage.rs
crates/sdit-core/src/pty/: mod.rs
crates/sdit-core/src/render/: atlas.rs  font.rs  mod.rs  pipeline.rs
crates/sdit-core/src/render/shaders/: background.wgsl  cell.wgsl
crates/sdit-core/src/session/: mod.rs  persistence.rs  session.rs  sidebar.rs  window_registry.rs
crates/sdit-core/src/terminal/: handler.rs  mod.rs  search.rs  tests.rs  url_detector.rs  vi_mode.rs
crates/sdit-core/tests/: headless_pipeline.rs
crates/sdit-render/: Cargo.toml
crates/sdit-render/src/: atlas.rs  font.rs  lib.rs  pipeline.rs
crates/sdit-render/src/shaders/: cell.wgsl
crates/sdit-session/: Cargo.toml
crates/sdit-session/src/: lib.rs  session.rs  window_registry.rs
crates/sdit/src/: action_handlers.rs  app.rs  command_palette.rs  config_watcher.rs  confirm_close.rs  cwd_utils.rs  event_loop.rs  headless.rs  input.rs  main.rs  menu.rs  mouse_handler.rs  quick_select.rs  quick_terminal.rs  rename.rs  render.rs  scrollbar.rs  search.rs  secure_input.rs  selection_utils.rs  url_hover.rs  vi_mode.rs  window.rs  window_ops.rs
crates/sdit/tests/: gui_interaction.rs  smoke_gui.rs  smoke_headless.rs  source_file_limits.rs
docs/knowhow/: INDEX.md  architecture-decisions.md  config-and-theming.md  context-menu-macos.md  cosmic-text-glyph-api.md  cosmic-text-glyph-rasterize.md  cursor-config.md  delegating-to-codex-copilot.md  feature-survey-log.md  glyph-cache-atlas-mismatch.md  grid-implementation.md  gui-test-cjk-validation.md  gui-test-image-tools.md  gui-test-ime-interference.md  gui-test-process-identification.md  gui-test-screen-recording-permission.md  ime-input-support.md  integration-testing-patterns.md  macos-modifier-key-event-order.md  macos26-pty-compat.md  mouse-event-reporting.md  muda-menubar-integration.md  multi-window-session-management.md  pty-output-frame-throttling.md  pty-thread-separation.md  pty-threading-model.md  quick-select-overlay.md  selection-clipboard.md  session-sidebar-rendering.md  shell-integration-osc133.md  terminal-device-reports.md  test-smell-detector.md  vte-integration.md  vte-terminal-integration.md  wgpu-instanced-rendering.md  wgpu-srgb-double-gamma.md  wgpu-winit-integration.md
docs/manuals/: README.md  basic-usage.md  configuration.md  installation.md  keybinds.md  themes.md
docs/plans/: phase0-reference-reading.md  phase1-core-mvp.md  phase10.1-hot-reload.md  phase10.2-window-persistence.md  phase10.3-ligature-emoji.md  phase11.1-macos-menubar.md  phase11.2-context-menu.md  phase11.3-gui-settings.md  phase12-macos-release-guide.md  phase12-macos-release.md  phase13-quality-essentials.md  phase13.1-option-as-alt.md  phase13.2-visual-bell.md  phase13.3-window-opacity.md  phase13.4-unsafe-paste.md  phase13.5-kitty-keyboard.md  phase13.6-desktop-notification.md  phase14-config-refinement.md  phase14.1-cursor-config.md  phase14.2-scrollback-config.md  phase14.3-window-padding.md  phase14.4-initial-window-size.md  phase14.5-shell-integration.md  phase14.6-quick-select.md  phase15.1-vi-mode.md  phase15.2-input-polish.md  phase15.3-font-advanced.md  phase15.4-link-session.md  phase16-ux-polish.md  phase16.1-scrollbar.md  phase16.2-startup-mode.md  phase16.3-confirm-close.md  phase16.4-selection-colors.md  phase16.5-clipboard-trim.md  phase16.6-cwd-inherit.md  phase16.7-scroll-to-bottom.md  phase16.8-minimum-contrast.md  phase16.9-secure-input.md  phase17-quality-ux.md  phase17.1-theme-preset.md  (+64 more)
docs/ref-notes/: alacritty-grid.md  ghostty-macos-native-tabs.md  ghostty-surface.md  wezterm-mux.md  zellij-tabbar.md
docs/test-scenarios/: 001-basic-echo.md  002-window-resize.md  003-multi-window.md  004-window-independent-close.md  005-session-add-sidebar.md  009-cjk-display.md  (+34 more)
scripts/: check.sh
tools/: permissions-to-flags.sh
(+22 files in other folders)
