[workspace]
members = [
    "crates/sdit",
    "crates/sdit-core",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2024"
authors     = ["SDIT Contributors"]
license     = "GPL-3.0-or-later"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic の中で過度に厳しいもの
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

[workspace.dependencies]
# PTY・ターミナルコア
vte         = "0.13"
pty-process = "0.4"

# GUI・レンダリング
winit = "0.30"
wgpu  = "0.20"

# フォント
cosmic-text = "0.12"

# 設定
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"

# システム
rustix        = { version = "0.38", features = ["termios", "process"] }

# パス解決
dirs = "5"

# ユーティリティ
bitflags      = "2"
unicode-width = "0.2"
log           = "0.4"
env_logger    = "0.11"
thiserror     = "1"
anyhow        = "1"
pollster      = "0.4"
bytemuck      = { version = "1", features = ["derive"] }
regex         = "1"
notify        = "7"
