[package]
name = "sdit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
vte         = { workspace = true }
pty-process = { workspace = true }
log         = { workspace = true }
thiserror   = { workspace = true }
