[package]
name = "sdit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
vte           = { workspace = true }
pty-process   = { workspace = true }
bitflags      = { workspace = true }
unicode-width = { workspace = true }
log           = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
