[package]
name = "sdit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
vte           = { workspace = true }
pty-process   = { workspace = true }
bitflags      = { workspace = true }
unicode-width = { workspace = true }
log           = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
toml          = { workspace = true }
dirs          = { workspace = true }
rustix        = { workspace = true }
wgpu          = { workspace = true }
winit         = { workspace = true }
cosmic-text   = { workspace = true }
anyhow        = { workspace = true }
pollster      = { workspace = true }
bytemuck      = { workspace = true }

[dev-dependencies]
