[package]
name = "sdit-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
sdit-core = { path = "../sdit-core" }
log       = { workspace = true }
thiserror = { workspace = true }
