[package]
name = "sdit-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
sdit-core = { path = "../sdit-core" }
rustix    = { workspace = true }
log       = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true }
toml      = { workspace = true }
dirs      = { workspace = true }
