[package]
name = "sdit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "sdit"
path = "src/main.rs"

[dependencies]
sdit-core    = { path = "../sdit-core" }
sdit-session = { path = "../sdit-session" }
sdit-render  = { path = "../sdit-render" }
sdit-config  = { path = "../sdit-config" }
winit        = { workspace = true }
wgpu         = { workspace = true }
log          = { workspace = true }
env_logger   = { workspace = true }
anyhow       = { workspace = true }
