[package]
name = "sdit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "sdit"
path = "src/main.rs"

[dependencies]
sdit-core    = { path = "../sdit-core" }
winit        = { workspace = true }
wgpu         = { workspace = true }
log          = { workspace = true }
env_logger   = { workspace = true }
anyhow       = { workspace = true }
arboard      = "3"
notify       = { workspace = true }
muda = "0.17.1"
open = "5"
