[package]
name = "sdit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "sdit"
path = "src/main.rs"

[dependencies]
sdit-core    = { path = "../sdit-core" }
winit        = { workspace = true }
wgpu         = { workspace = true }
log          = { workspace = true }
env_logger   = { workspace = true }
anyhow       = { workspace = true }
arboard      = "3"
dirs         = { workspace = true }
image        = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
notify       = { workspace = true }
notify-rust  = "4"
regex        = { workspace = true }
muda = "0.17.1"
open = "5"
ctrlc = "3"
rfd = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.7"
